asteria/core/tests/errors/elaboration_errors/type_parameter_not_uniform_in_constructors.asteriacore
data Foo (a : Type) where
   | MkFoo1 : Test$Foo(a)
   | MkFoo2 {b : Type} : Test$Foo(b -> b)
   ;;
